--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "bcrypt": "^5.1.1"
     },
     "engines": {
-        "node": "10.19.0",
-        "npm": "6.14.11"
+        "node": "18.16.0"
     }
 }
